# x-reader

./: .env.example  .gitignore  README.md  SKILL.md  mcp_server.py  pyproject.toml
.claude-plugin/: marketplace.json
.github/workflows/: deploy-pages.yml
output/: content_hub.md
plugins/x-reader/skills/analyzer/: SKILL.md
plugins/x-reader/skills/video/: SKILL.md
scripts/: fetch_tweet.py
skills/analyzer/: skill.md
skills/video/: skill.md
tests/: test_bilibili_connector.py  test_bundle.py  test_cli.py  test_connector_contract.py  test_connector_registry.py  test_fxtwitter.py  test_git_publish.py  test_models.py  test_project_identity.py  test_publishing.py  test_render.py  test_rss_connector.py  test_telegram_bot.py  test_web_connector.py  test_wechat_connector.py  test_x_connector.py  test_xiaohongshu_connector.py  test_youtube_connector.py
x_reader/: cli.py  login.py  reader.py
x_reader/fetchers/: browser.py  camofox_client.py  twitter.py  wechat.py  whisper.py  xhs.py  youtube.py
x_reader/utils/: storage.py
xfetch/: cli.py  models.py  telegram_bot.py
xfetch/backends/: fxtwitter.py
xfetch/connectors/: bilibili.py  registry.py  rss.py  web.py  wechat.py  x.py  xiaohongshu.py  youtube.py
xfetch/pipeline/: bundle.py
xfetch/publishing/: __init__.py  base.py  git_publish.py  github_repo_sync.py
xfetch/storage/: __init__.py  render.py
